# cabinet

./: .gitignore  Cargo.toml  README.md  flake.nix
docs/: features.md
src/: main.rs  parser.rs  path.rs  utils.rs
src/commands/: date.rs  file_date.rs  file_name.rs  file_size.rs  file_type.rs  help.rs  mod.rs  multisort.rs  name.rs  size.rs
src/sort/: date.rs  mod.rs
src/util/: mod.rs  path.rs  utils.rs
tests/: generate_files.py  genfiles.py
