[package]
name = "cabinet"
version = "0.3.0"
license = "MPL-2.0"
description = " A cross-platform file sorting program"
readme = "README.md"
repository = "https://github.com/rayokamoto/cabinet"
edition = "2021"

[dependencies]
chrono = "0.4.19"
dirs = "4.0"
regex = "1.5"

[[bin]]
name = "cab"
path = "src/main.rs"

[profile.release]
opt-level = 3
