[package]
name = "cabinet"
version = "0.4.0"
license = "MPL-2.0"
description = "A convenient file sorting utility"
readme = "README.md"
repository = "https://github.com/rayokamoto/cabinet"
edition = "2021"

[dependencies]
chrono = "0.4.23"
clap = "4.0.25"
dirs = "4.0.0"
regex = "1.7.0"

[[bin]]
name = "cab"
path = "src/main.rs"

[profile.release]
opt-level = 3
