[package]
name = "cabinet"
version = "0.6.2"
license = "MPL-2.0"
description = "A convenient file sorting utility"
readme = "README.md"
repository = "https://github.com/rayokamoto/cabinet"
edition = "2021"

[dependencies]
chrono = "0.4.43"
clap = "4.5"
dirs = "6"
regex = "1.12"

[[bin]]
name = "cab"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
